@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.22.0a12
+current_version = 1.22.0a13
 commit = False
 tag = False
 allow_dirty = True
