@@ -1,0 +1,23 @@
+# Generated by Django 2.2 on 2019-05-28 10:14
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0026_agreement'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='pdindicator',
+            name='baseline_denominator',
+            field=models.DecimalField(blank=True, decimal_places=3, max_digits=8, null=True),
+        ),
+        migrations.AlterField(
+            model_name='pdindicator',
+            name='baseline_numerator',
+            field=models.DecimalField(blank=True, decimal_places=3, max_digits=8, null=True),
+        ),
+    ]
