@@ -1,0 +1,23 @@
+# Generated by Django 2.2 on 2019-05-28 10:33
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0027_auto_20190528_1014'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='pdindicator',
+            name='target_denominator',
+            field=models.DecimalField(blank=True, decimal_places=3, max_digits=10, null=True),
+        ),
+        migrations.AlterField(
+            model_name='pdindicator',
+            name='target_numerator',
+            field=models.DecimalField(blank=True, decimal_places=3, max_digits=10, null=True),
+        ),
+    ]
