@@ -6,6 +6,8 @@
 * New endpoint datamart/users/
 * New endpoint datamart/users-offices/
 * New endpoint datamart/reports/sections/
+* New endpoint datamart/partners/contacts/
+* New endpoint datamart/partners/agreements/
 * Updates datamart/travel-activities
 * Updates datamart/travel-activities: add result_* fields
 * Updates InterventionSerializerFull: add locations, offices, sections, partner_id and partner_source_id
@@ -13,7 +15,8 @@
 * fixes formats popup menu
 * new LocationMixin
 * fixes Partner.hact_values handling
-* ActionPoint - new serializer
+* ActionPoint - new serializer (v2)
+* Fixes PDIndicator
 
 1.21
 ----
